# sqlite-objs

./: .gitignore  ANSWERS_TO_QUESTIONS.md  LICENSE  Makefile  README.md  TEST_DOCS_INDEX.md  TEST_INFRASTRUCTURE_DETAILED.md  TEST_INFRASTRUCTURE_QUICK_REFERENCE.md  TEST_QUICK_REFERENCE.md  VFS_TEST_INFRASTRUCTURE.md  azqlite-shell
.squad/: decisions.md  routing.md  team.md
.squad/agents/aragorn/: history.md
.squad/agents/frodo/: history.md
.squad/agents/gandalf/: history.md
.squad/agents/gimli/: charter.md  history.md
.squad/agents/merry/: charter.md  history.md
.squad/agents/samwise/: history.md
.squad/agents/scribe/: charter.md
.squad/casting/: registry.json
.squad/decisions/inbox/: aragorn-lazy-cache-impl.md  aragorn-perf-diagnosis.md  aragorn-stale-read-fix.md  aragorn-vfs-metrics.md  aragorn-wal-block-blob.md  frodo-phase1-wins.md  samwise-tcl-expansion.md
.squad/identity/: now.md
.squad/log/: 2026-03-10T061500Z-research-phase.md  2026-03-10T074307Z-session.md  2026-03-11T06:33:10Z-benchmark-harness.md  2026-03-21T05-38-00Z-lazy-cache-impl.md
.squad/orchestration-log/: 2026-03-10T040000Z-gandalf-prior-art.md  2026-03-10T041500Z-frodo-azure-poc.md  2026-03-10T043000Z-aragorn-vfs-analysis.md  2026-03-10T044500Z-samwise-testing-strategy.md  2026-03-10T050000Z-gandalf-design-review.md  2026-03-10T074307Z-frodo-agent-10.md  2026-03-10T074307Z-frodo-agent-13.md  2026-03-10T074307Z-gandalf-agent-11.md  2026-03-10T074307Z-samwise-agent-12.md  2026-03-11T06:33:10Z-aragorn.md  2026-03-21T05-38-00Z-aragorn.md
.squad/skills/rust-ffi-crate/: SKILL.md
benchmark/: .gitignore  Makefile  README.md  benchmark  benchmark.c  speedtest1  speedtest1_wrapper.c
benchmark/tpcc/: Makefile  README.md  tpcc.c  tpcc_load.c  tpcc_txn.c
demo/: README.md  azure-demo.sh
research/: adaptive-readahead-design.md  azure-blob-analysis.md  code-review.md  demand-paging-design-review.md  design-review.md  local-disk-cache-design.md  prefetch-strategies-design.md  prior-art.md  sqlite-vfs-analysis.md
research/azure-poc/: azure_blob.h  azure_poc_main.c
rust/: Cargo.toml  DEVELOPMENT.md  QUICKSTART.md  README.md
rust/azqlite/: Cargo.toml
rust/azqlite-sys/: Cargo.toml  build.rs
rust/azqlite/tests/: azure_smoke.rs
rust/sqlite-objs/: Cargo.toml
rust/sqlite-objs-sys/: .gitignore  Cargo.toml  build.rs
rust/sqlite-objs-sys/csrc/: azure_client.c  azure_client.h  azure_client_impl.h  azure_client_stub.c  sqlite_objs.h  sqlite_objs_vfs.c
rust/sqlite-objs-sys/src/: lib.rs
rust/sqlite-objs/examples/: basic.rs  reconnect_bench.rs
rust/sqlite-objs/src/: lib.rs  metrics.rs  pragmas.rs
rust/sqlite-objs/tests/: azure_smoke.rs  perf_matrix.rs  threading.rs  vfs_integration.rs
scripts/: cargo-publish.sh  release-gate.sh
src/: azqlite.h  azqlite_cache.c  azqlite_cache.h  azqlite_shell.c  azqlite_vfs.c  azure_auth.c  azure_client.c  azure_client.h  azure_client_impl.h  azure_client_stub.c  azure_error.c  sqlite_objs.h  sqlite_objs_shell.c  sqlite_objs_vfs.c
test/: README-INTEGRATION.md  SECURITY-TESTING.md  TEST-MATRIX.md  mock_azure_ops.c  mock_azure_ops.h  run-integration.sh  tcl-test-status.md  test-azurite-connection.sh  test_azure_client.c  test_coalesce.c  test_harness.h  test_integration.c  test_main.c  test_uri.c  test_vfs.c  test_wal.c
test/tcl/: build-testfixture.sh  run-tcl-tests.sh  testfixture_vfs_init.c
