[package]
name = "azqlite"
description = "Safe Rust bindings for azqlite - SQLite VFS backed by Azure Blob Storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
azqlite-sys = { path = "../azqlite-sys" }
thiserror = "2.0"

[dev-dependencies]
rusqlite = "0.38"
tempfile = "3.8"
