[package]
name = "sqlite-objs-sys"
description = "Raw FFI bindings to sqlite-objs C library"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

links = "sqlite-objs"
build = "build.rs"
# csrc/ is populated by scripts/cargo-publish.sh before packaging.
# The explicit include overrides .gitignore so cargo bundles them.
include = ["build.rs", "src/**", "csrc/**", "Cargo.toml", "LICENSE*", "README*"]

[dependencies]
libc.workspace = true
libsqlite3-sys = { version = "0.36", features = ["bundled"] }

[build-dependencies]
cc = "1.0"
