[package]
name = "sqlite-objs"
description = "Safe Rust bindings for sqlite-objs - SQLite VFS backed by Azure Blob Storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sqlite-objs-sys = { path = "../sqlite-objs-sys" }
thiserror = "2.0"

[dev-dependencies]
rusqlite = "0.38"
tempfile = "3.8"
